@@ -11,6 +11,18 @@ sub constraint {
     return shift->processor(@_);
 }
 
+around render_data_non_recursive => sub {
+    my ( $orig, $self, $args ) = @_;
+
+    my $render = $self->$orig( {
+            stage      => $self->stage,
+            constraint => $self->constraint,
+            $args ? %$args : (),
+        });
+
+    return $render;
+};
+
 __PACKAGE__->meta->make_immutable;
 
 1;
